--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,5 +41,7 @@
     <![endif]-->
 
     <!-- ga & ba script hoook -->
-    <script></script>
+    <script type="text/javascript" async
+src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML" async>
+</script>
 </head>
