--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,36 +41,38 @@
     <![endif]-->
 
     <!-- ga & ba script hoook -->
-    <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML" async></script>
--
--   <script type="text/x-mathjax-config">
--    MathJax.Hub.Config({
--        showProcessingMessages: false,
--        messageStyle: "none",
--        extensions: ["tex2jax.js"],
--        jax: ["input/TeX", "output/HTML-CSS"],
--        tex2jax: {
--            inlineMath:  [ ["$", "$"] ],
--            displayMath: [ ["$$","$$"] ],
--            skipTags: ['script', 'noscript', 'style', 'textarea', 'pre','code','a'],
--            ignoreClass:"comment-content"
--        },
--        "HTML-CSS": {
--            availableFonts: ["STIX","TeX"],
--            showMathMenu: false
--        }
--    });
--    MathJax.Hub.Queue(["Typeset",MathJax.Hub]);
--    </script>
--    
--    <script data-no-instant>
--    InstantClick.on('change', function(isInitialLoad){
--        if (isInitialLoad === false) {
--            if (typeof MathJax !== 'undefined'){
--                MathJax.Hub.Queue(["Typeset",MathJax.Hub]);
--            }
--        }
--    });
--    InstantClick.init();
--    </script>
+    <script type="text/javascript" async
+src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML" async>
+</script>
+
+<script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+        showProcessingMessages: false,
+        messageStyle: "none",
+        extensions: ["tex2jax.js"],
+        jax: ["input/TeX", "output/HTML-CSS"],
+        tex2jax: {
+            inlineMath:  [ ["$", "$"] ],
+            displayMath: [ ["$$","$$"] ],
+            skipTags: ['script', 'noscript', 'style', 'textarea', 'pre','code','a'],
+            ignoreClass:"comment-content"
+        },
+        "HTML-CSS": {
+            availableFonts: ["STIX","TeX"],
+            showMathMenu: false
+        }
+    });
+    MathJax.Hub.Queue(["Typeset",MathJax.Hub]);
+    </script>
+    
+    <script data-no-instant>
+    InstantClick.on('change', function(isInitialLoad){
+        if (isInitialLoad === false) {
+            if (typeof MathJax !== 'undefined'){
+                MathJax.Hub.Queue(["Typeset",MathJax.Hub]);
+            }
+        }
+    });
+    InstantClick.init();
+    </script>
 </head>
